--- a/views/admin_login.gohtml
+++ b/views/admin_login.gohtml
@@ -6,7 +6,7 @@
           <h3 class="display-6">ADMIN SIGN-IN</h3>
           <p class="text-secondary">Please sign-in to manage!</p>
         </div>
-        <form class="d-flex flex-column align-items-center justify-content-center" action="/admin-authenticate" method="POST">
+        <form class="d-flex flex-column align-items-center justify-content-center" action="/admin/authenticate" method="POST">
           <div class="mb-3">
             <label class="form-label" for="exampleInputEmail1">Email address</label>
             <input class="form-control" name="emailId" type="email" id="exampleInputEmail1" aria-describedby="emailHelp">
