--- a/views/user_dashboard.gohtml
+++ b/views/user_dashboard.gohtml
@@ -2,7 +2,7 @@
     <body id="user-dashboard-body">
         <nav class="navbar navbar-light justify-content-between px-5">
             <a class="navbar-brand" href=""><img id="nike-main-logo" src="./assets/images/Nike_logo_black.png" alt="logo"></a>
-            <a href="" class="nav-user-profile p-2">
+            <a href="/user/logout" class="nav-user-profile p-2">
                 <div>
                     <label id="nav-username">{{ .UserName }}</label>
                     <label id="nav-logout-bt">Logout</label>
