--- a/views/user_dashboard.gohtml
+++ b/views/user_dashboard.gohtml
@@ -1,7 +1,7 @@
 {{ template "header" . }}
     <body id="user-dashboard-body">
         <nav class="navbar navbar-light justify-content-between px-5">
-            <a class="navbar-brand" href=""><img id="nike-main-logo" src="./assets/images/Nike_logo_black.png" alt="logo"></a>
+            <a class="navbar-brand" href=""><img id="nike-main-logo" src="../assets/images/Nike_logo_black.png" alt="logo"></a>
             <a href="/user/logout" class="nav-user-profile p-2">
                 <div>
                     <label id="nav-username">{{ .UserName }}</label>
